@@ -82,6 +82,9 @@ protected:
 	QTimer refreshTimer;         //< Timer to exclude sudden refreshes
 	KDirWatch *watcher;          //< The internal dir watcher - use to detect changes in directories
 	vfile* vfileFromName(const QString& name);
+
+private:
+	bool burstRefresh( const QString &path );
 };
 
 #endif
